fix_overflow

--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,22 @@
   transform: translate(-50%, 0%);  
 }
 
-
-@media only screen and (max-width: 600px) {
-  .header {
-    margin: 10px;
+/*awkward fix*/
+@media only screen and (max-height: 800px) {
+  .searchres {
+    top: 8%;
   }
 }
+
+@media only screen and (max-height: 600px) {
+  .searchres {
+    top: 10%;
+  }
+}
+
+@media only screen and (max-height: 500px) {
+  .searchres {
+    top: 12%;
+  }
+}
+
